--- a/register.css
+++ b/register.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Times New Roman', Times, serif;
     background-size: cover;
-    background-image: url(images/img-fond1.jpg);
+    background-image: url(imgs/img-fond1.jpg);
     backdrop-filter: blur(5px);
     }
     
@@ -44,8 +44,10 @@ body {
         padding: 10px;
         border: none;
         border-radius: 7px;
+        
         cursor: pointer;
         }
+        
         
         button[type="submit"]:hover {
         background-color: #3e8e41;
