--- a/register.css
+++ b/register.css
@@ -37,20 +37,21 @@ body {
         }
         
         button[type="submit"] {
-        width: 40%;
+        width: 100%;
         height: 40px;
-        background-color: #4CAF50;
+        background-color: #54ca68;
         color: #fff;
         padding: 10px;
         border: none;
         border-radius: 7px;
-        
         cursor: pointer;
+        float:right;
         }
         
         
         button[type="submit"]:hover {
-        background-color: #3e8e41;
+        background-color: #5fd46f;
+
         }
         h1{
             text-align:  center;
