--- a/register.css
+++ b/register.css
@@ -1,59 +1,120 @@
 body {
-    font-family: 'Times New Roman', Times, serif;
-    background-size: cover;
-    background-image: url(imgs/img-fond1.jpg);
+    background-image: radial-gradient(circle, #f9ecec, #fae8e4, #f6d7d2, hsl(64, 55%, 89%)); 
     backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    font-family: 'Monsterrat';
     }
     
     .container {
-    width: 400px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 0 0px 10px rgba(151, 223, 167, 0.5);
+        
+        width: 30%;
+        height: auto;
+        overflow: hidden;
+        display: flex;
+        margin:  50px ;
+        padding: 30px;
+        position: relative;
+        background-color: #fff;
+        border-radius: 30px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+        flex-direction: column;
+        align-items: normal;
+        justify-content: flex-start;
     }
+
+    .header-container {
+         display: flex; 
+         align-items: center; 
+         justify-content: center; 
+         margin-bottom: 20px; 
+        }
+
+
+    .logo {
+         max-width: 68px; 
+         height: auto;
+         margin-bottom: 05px; 
+     }
     
     h2 {
     margin-top: 0;
     }
     
     .form-group {
-    margin-bottom: 15px;
+        margin-bottom: 15px;
+        height: 100%;
+
     }
     label {
         display: block;
+        font-family: 'Geneva', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 10px;
         margin-bottom: 10px;
         }
         
         input[type="text"], input[type="email"], input[type="password"], input[type="tel"] {
-        width: 97%;
-        height: 20px;
-        margin-bottom: -10px;
-        padding: 5px;
-        border: 1px solid #ccc;
-        border-radius: 50px;
+            width: 89%;
+            height: 30px;
+            font-size: 12px;
+            margin-top: 10px;
+            margin-left: 5px;
+            margin-bottom: 10px;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 50px;
+            background-color: #eee;
+            outline: none;
         }
         
         button[type="submit"] {
-        width: 100%;
-        height: 40px;
-        background-color: #54ca68;
-        color: #fff;
-        padding: 10px;
-        border: none;
-        border-radius: 7px;
-        cursor: pointer;
-        float:right;
+            width: 66%;
+            height: 40px;
+            background-color: tomato;
+            color: #fff;
+            font-size: 12px;
+            padding: 10px;
+            border: 1px solid transparent;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            text-align: center;
+            border-radius: 8px;
+            margin-top: 30px;
+            display:block;
+           margin-left: 73px;
+            flex-direction: column;
+           
+            align-items: center; 
+            justify-content: center;
+            margin-bottom: 30px;
+            cursor: pointer;
         }
-        
+        .text-container {
+             display: flex;
+             justify-content: center; 
+              width: 100%;
+             text-align: center;}
+
+        .link-tomato {
+            color: tomato;
+            text-decoration: none; 
+            }
+            
+        .link-tomato:hover {
+            text-decoration: underline;
+            }
+            
         
         button[type="submit"]:hover {
-        background-color: #5fd46f;
-
+        background-color: rgb(248, 127, 106);
         }
         h1{
-            text-align:  center;
-            color: #fff;
+            text-align: center;
+            color:tomato;
+            margin-top: 20px;
+            margin-bottom: 20px;
                 }
